--- a/dashboard.html
+++ b/dashboard.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>CRM Dashboard</title>
   <style>
-    body { font-family: Arial, sans-serif; margin:0; background:#f4f4f4;}
-    .sidebar { width:220px; background:#fff; position:fixed; top:0; left:0; height:100vh; border-right:1px solid #ccc; padding-top:20px;}
-    .sidebar button { background:#1976d2; color:#fff; padding:10px; margin:10px; width:180px; border:none; border-radius:4px; cursor:pointer;}
-    .sidebar ul { list-style:none; padding:0;}
-    .sidebar ul li { margin:20px;}
-    .sidebar ul li a { text-decoration:none; color:#1976d2; font-weight:bold;}
-    .main { margin-left:220px; padding:20px;}
-    table { border-collapse:collapse; width:100%;}
-    th, td { border:1px solid #ddd; padding:8px; text-align:left;}
-    th { background:#1976d2; color:#fff;}
+    body{margin:0;font-family:Arial,sans-serif;background:#f5f5f5;}
+    header{background:#1565c0;color:#fff;padding:20px;text-align:center;font-size:24px;}
+    .sidebar{width:220px;position:fixed;top:0;bottom:0;background:#fff;border-right:1px solid #ccc;padding-top:20px;}
+    .sidebar button{width:180px;margin:10px;padding:10px;background:#1976d2;color:#fff;border:none;border-radius:4px;cursor:pointer;}
+    .sidebar ul{list-style:none;padding:0;}
+    .sidebar ul li{margin:15px;}
+    .sidebar ul li a{color:#1976d2;text-decoration:none;font-weight:bold;}
+    .main{margin-left:220px;padding:20px;}
+    .tabs{display:flex;gap:15px;margin-bottom:20px;}
+    .tabs button{padding:10px 15px;border:none;border-bottom:3px solid transparent;background:none;color:#1976d2;font-size:16px;cursor:pointer;}
+    .tabs button.active{border-color:#1976d2;font-weight:bold;}
+    .section{display:none;}
+    .section.active{display:block;}
+    table{width:100%;border-collapse:collapse;margin-top:10px;background:#fff;}
+    th,td{border:1px solid #ddd;padding:8px;text-align:left;}
+    th{background:#1976d2;color:#fff;}
+    input,select{padding:6px;width:200px;margin-right:10px;}
+    .modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.4);z-index:2;}
+    .modal-content{background:#fff;width:400px;max-width:90%;margin:100px auto;padding:20px;border-radius:6px;position:relative;}
+    .modal-content h3{margin-top:0;}
+    .close{position:absolute;top:10px;right:15px;font-size:20px;cursor:pointer;}
+    button.submit{background:#1976d2;color:#fff;padding:8px 15px;border:none;border-radius:4px;cursor:pointer;margin-top:10px;}
   </style>
+
   <!-- Firebase -->
   <script type="module">
-    // Firebase Imports
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { getAuth, onAuthStateChanged, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+    import { getFirestore, collection, addDoc, onSnapshot, doc, deleteDoc, updateDoc, query, where } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { getStorage, ref as storageRef, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyDaZjc53y1us3aFL9yfExSpYVvYSZt0aeA",
@@ -33,59 +46,203 @@
     };
 
     const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
     const db = getFirestore(app);
+    const storage = getStorage(app);
 
-    window.onload = async () => {
-      const tasksCol = collection(db, "tasks");
-      const taskSnapshot = await getDocs(tasksCol);
-      const taskList = taskSnapshot.docs.map(doc => doc.data());
+    let editId = null;
 
+    function setupAuthUI(user) {
+      document.getElementById("loginSection").style.display = user ? "none" : "block";
+      document.getElementById("appSection").style.display = user ? "block" : "none";
+      if(user) {
+        document.getElementById("userEmail").innerText = user.email;
+        loadTasks();
+      }
+    }
+
+    window.onload = () => {
+      onAuthStateChanged(auth, setupAuthUI);
+
+      document.getElementById("loginForm").addEventListener("submit", async e => {
+        e.preventDefault();
+        const email = document.getElementById("loginEmail").value;
+        const pass = document.getElementById("loginPassword").value;
+        try {
+          await signInWithEmailAndPassword(auth, email, pass);
+        } catch {
+          await createUserWithEmailAndPassword(auth, email, pass);
+        }
+      });
+
+      document.getElementById("logoutBtn").onclick = () => signOut(auth);
+
+      // Tab switching
+      document.querySelectorAll(".tabs button").forEach(btn => {
+        btn.onclick = () => {
+          document.querySelectorAll(".tabs button").forEach(b=>b.classList.remove("active"));
+          btn.classList.add("active");
+          document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
+          document.getElementById(btn.dataset.target).classList.add("active");
+        };
+      });
+
+      // Open modal
+      document.getElementById("newTaskBtn").onclick = () => {
+        editId = null;
+        document.getElementById("taskForm").reset();
+        document.getElementById("modalTitle").innerText = "Add Task";
+        document.getElementById("taskModal").style.display = "block";
+      };
+      // Close modal
+      document.getElementById("closeModal").onclick = () => document.getElementById("taskModal").style.display = "none";
+      window.onclick = e => { if(e.target.id==="taskModal") document.getElementById("taskModal").style.display = "none"; };
+
+      document.getElementById("taskForm").onsubmit = async e => {
+        e.preventDefault();
+        const data = {
+          name: document.getElementById("tname").value,
+          status: document.getElementById("tstatus").value,
+          start: document.getElementById("tstart").value,
+          due: document.getElementById("tdue").value,
+          priority: document.getElementById("tpriority").value
+        };
+        const file = document.getElementById("tfile").files[0];
+        if(file) {
+          const fRef = storageRef(storage, `tasks/${Date.now()}_${file.name}`);
+          await uploadBytes(fRef, file);
+          data.fileUrl = await getDownloadURL(fRef);
+        }
+        if(editId) {
+          await updateDoc(doc(db,"tasks",editId), data);
+        } else {
+          await addDoc(collection(db,"tasks"), data);
+        }
+        document.getElementById("taskModal").style.display = "none";
+      };
+
+      document.getElementById("searchInput").oninput = loadTasks;
+    };
+
+    async function loadTasks() {
+      const search = document.getElementById("searchInput").value.toLowerCase();
+      const snapshot = await getDocs(collection(db, "tasks"));
       const tbody = document.getElementById("taskTableBody");
       tbody.innerHTML = "";
-      let count = 1;
-      taskList.forEach(task => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${count++}</td>
-          <td>${task.name || "N/A"}</td>
-          <td>${task.status || "N/A"}</td>
-          <td>${task.start || "N/A"}</td>
-          <td>${task.due || "N/A"}</td>
-          <td>${task.priority || "N/A"}</td>
-        `;
-        tbody.appendChild(tr);
+      let idx = 1;
+      snapshot.forEach(docSnap => {
+        const t = docSnap.data();
+        const matches = t.name.toLowerCase().includes(search) ||
+                        t.status.toLowerCase().includes(search) ||
+                        t.priority.toLowerCase().includes(search);
+        if(!search || matches) {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `<td>${idx++}</td>
+            <td>${t.name}</td>
+            <td>${t.status}</td>
+            <td>${t.start}</td>
+            <td>${t.due}</td>
+            <td>${t.priority}</td>
+            <td><button onclick="editTask('${docSnap.id}')">Edit</button>
+                <button onclick="deleteTask('${docSnap.id}')">Delete</button>
+                ${t.fileUrl?`<a href="${t.fileUrl}" target="_blank">Attachment</a>`:""}</td>`;
+          tbody.appendChild(tr);
+        }
       });
-    };
+    }
+
+    async function deleteTask(id) {
+      if(confirm("Delete task?")) await deleteDoc(doc(db,"tasks",id)), loadTasks();
+    }
+
+    async function editTask(id) {
+      editId = id;
+      const docSnap = await getDocs(collection(db,"tasks"));
+      docSnap.forEach(d=>{
+        if(d.id === id) {
+          const t = d.data();
+          document.getElementById("tname").value = t.name;
+          document.getElementById("tstatus").value = t.status;
+          document.getElementById("tstart").value = t.start;
+          document.getElementById("tdue").value = t.due;
+          document.getElementById("tpriority").value = t.priority;
+          document.getElementById("modalTitle").innerText = "Edit Task";
+        }
+      });
+      document.getElementById("taskModal").style.display = "block";
+    }
   </script>
 </head>
 <body>
+
+<header>
+  CRM Dashboard | <span id="userEmail"></span> 
+  <button id="logoutBtn" style="float:right;padding:6px 12px;">Logout</button>
+</header>
+
+<div id="loginSection" style="text-align:center;margin-top:100px;">
+  <h2>Login / Sign Up</h2>
+  <form id="loginForm">
+    <input type="email" id="loginEmail" placeholder="Email" required />
+    <input type="password" id="loginPassword" placeholder="Password" required />
+    <button class="submit">Enter</button>
+  </form>
+</div>
+
+<div id="appSection" style="display:none;">
   <div class="sidebar">
-    <button>+ New Task</button>
+    <button id="newTaskBtn">+ New Task</button>
     <ul>
-      <li><a href="#">Dashboard</a></li>
-      <li><a href="#">Tasks</a></li>
-      <li><a href="#">Leads</a></li>
-      <li><a href="#">Inbox</a></li>
-      <li><a href="#">Account</a></li>
+      <li><a href="#" data-target="dashboardSec" class="tabBtn active">Dashboard</a></li>
+      <li><a href="#" data-target="tasksSec" class="tabBtn">Tasks</a></li>
+      <li><a href="#" data-target="leadsSec" class="tabBtn">Leads</a></li>
+      <li><a href="#" data-target="inboxSec" class="tabBtn">Inbox</a></li>
+      <li><a href="#" data-target="accountSec" class="tabBtn">Account</a></li>
     </ul>
   </div>
   <div class="main">
-    <h1>CRM Dashboard</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Name</th>
-          <th>Status</th>
-          <th>Start</th>
-          <th>Due</th>
-          <th>Priority</th>
-        </tr>
-      </thead>
-      <tbody id="taskTableBody">
-        <tr><td colspan="6">Loading tasks...</td></tr>
-      </tbody>
-    </table>
+    <div class="tabs">
+      <button class="active" data-target="dashboardSec">Dashboard</button>
+      <button data-target="tasksSec">Tasks</button>
+      <button data-target="leadsSec">Leads</button>
+      <button data-target="inboxSec">Inbox</button>
+      <button data-target="accountSec">Account</button>
+    </div>
+
+    <div id="dashboardSec" class="section active">
+      <h2>🏠 Dashboard Home</h2>
+      <p>Welcome to CRM Dashboard!</p>
+    </div>
+
+    <div id="tasksSec" class="section">
+      <h2>Tasks</h2>
+      <input type="text" id="searchInput" placeholder="Search by name/status/priority" />
+      <table><thead><tr><th>#</th><th>Name</th><th>Status</th><th>Start</th><th>Due</th><th>Priority</th><th>Actions</th></tr></thead>
+      <tbody id="taskTableBody"><tr><td colspan="7">No tasks yet.</td></tr></tbody></table>
+    </div>
+
+    <div id="leadsSec" class="section"><h2>Leads (coming soon)</h2></div>
+    <div id="inboxSec" class="section"><h2>Inbox (coming soon)</h2></div>
+    <div id="accountSec" class="section"><h2>Account Details (coming soon)</h2></div>
   </div>
+</div>
+
+<!-- Modal -->
+<div id="taskModal" class="modal">
+  <div class="modal-content">
+    <span id="closeModal" class="close">&times;</span>
+    <h3 id="modalTitle">Add Task</h3>
+    <form id="taskForm">
+      <input type="text" id="tname" placeholder="Name" required />
+      <select id="tstatus" required><option value="">Status</option><option>Not Started</option><option>In Progress</option><option>Completed</option></select>
+      <input type="date" id="tstart" required />
+      <input type="date" id="tdue" required />
+      <select id="tpriority" required><option value="">Priority</option><option>Low</option><option>Normal</option><option>Urgent</option></select>
+      <input type="file" id="tfile" />
+      <button type="submit" class="submit">Submit</button>
+    </form>
+  </div>
+</div>
+
 </body>
 </html>
